--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "18.1.0",
     "react-markdown": "^8.0.3",
     "react-syntax-highlighter": "^15.5.0",
+    "react-type-animation": "^2.1.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
