install mongodb driver

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
+    "mongodb": "^4.9.1",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
