--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-markdown": "^8.0.3",
     "react-syntax-highlighter": "^15.5.0",
     "react-type-animation": "^2.1.1",
+    "sharp": "^0.31.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
