remove next.config.js file from ignored files

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
-next.config.js
+
 
 # testing
 /coverage
@@ -27,7 +27,8 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-.env*.local
+.env* 
+.local
 
 # vercel
 .vercel
