--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gray-matter": "^4.0.3",
     "mongodb": "^4.9.1",
     "next": "^12.3.1",
+    "next-auth": "^4.15.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-markdown": "^8.0.3",
