--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "gray-matter": "^4.0.3",
     "mongodb": "^4.9.1",
+    "mongoose": "^6.7.0",
     "next": "^12.3.1",
     "next-auth": "^4.15.0",
     "react": "18.1.0",
