--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-syntax-highlighter": "^15.5.0",
     "react-type-animation": "^2.1.1",
     "sharp": "^0.31.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^2.0.7",
