--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "dompurify": "^2.4.0",
     "gray-matter": "^4.0.3",
+    "jsdom": "^20.0.2",
     "mongoose": "^6.7.0",
     "next": "^12.3.1",
     "next-auth": "^4.15.0",
