--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dompurify": "^2.4.0",
     "gray-matter": "^4.0.3",
     "jsdom": "^20.0.2",
+    "marked": "^4.2.1",
     "mongoose": "^6.7.0",
     "next": "^12.3.1",
     "next-auth": "^4.15.0",
