--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsdom": "^20.0.2",
     "marked": "^4.2.1",
     "mongoose": "^6.7.0",
+    "multer": "^1.4.5-lts.1",
     "next": "^12.3.1",
     "next-auth": "^4.15.0",
     "react": "18.1.0",
