--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "multer": "^1.4.5-lts.1",
     "next": "^12.3.1",
     "next-auth": "^4.15.0",
+    "next-connect": "^0.13.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-markdown": "^8.0.3",
