--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-connect": "^0.13.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-icons": "^4.6.0",
     "react-markdown": "^8.0.3",
     "react-syntax-highlighter": "^15.5.0",
     "react-type-animation": "^2.1.1",
